# stackwatch

./: .gitignore  README.md  pyproject.toml
src/stackwatch/: __init__.py  alerts.py  cli.py  watcher.py
