[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stackwatch"
version = "0.1.0"
description = "A CLI tool that monitors AWS CloudFormation stack events in real-time with filtered output and alerting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "stackwatch contributors" }
]
keywords = ["aws", "cloudformation", "cli", "monitoring", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.7",
    "botocore>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "moto[cloudformation]>=5.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "boto3-stubs[cloudformation]>=1.34",
]

[project.scripts]
stackwatch = "stackwatch.cli:main"

[project.urls]
Homepage = "https://github.com/example/stackwatch"
Repository = "https://github.com/example/stackwatch"
Issues = "https://github.com/example/stackwatch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stackwatch --cov-report=term-missing"

[tool.coverage.run]
source = ["src/stackwatch"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
